src/objects/APTS_Language_Translation__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Original_Text__c</fullName>
        <label>Original Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Translated_Text__c</fullName>
        <label>Translated Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Language Translation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>APTS_Original_Text__c</columns>
        <columns>APTS_Language__c</columns>
        <columns>APTS_Translated_Text__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>LT-{00000000}</displayFormat>
        <label>Language Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Language Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>